--- a/style.css
+++ b/style.css
@@ -3,3 +3,43 @@ body {
   height: 100%;
   margin: 0;
 }
+
+h1 {
+  text-align: center;
+}
+
+img {
+  display: block;
+  margin: auto;
+  width: 50%;
+}
+
+figcaption {
+  text-align: center;
+  font-size: 14px;
+}
+
+section#featured-property p {
+  width: 800px;
+  text-align: center;
+  margin: auto;
+}
+
+div {
+  display: block;
+  background-color: rgb(168,72,50);
+  float: left;
+  text-align: center;
+  width: 25%;
+}
+
+nav {
+  text-align: center;
+}
+
+nav a {
+  background-color: gray;
+  padding-left: 10px;
+  padding-right: 10px;
+}
+
